# CPP_RPG

./: .clangd  .gitignore  CMakeLists.txt  DEVLOG.md  GDD.md
.cursor/rules/: cpp-game.mdc  dev.mdc
src/: battle_io.cpp  battle_io.hpp  battle_round.cpp  battle_round.hpp  game_rules.cpp  game_rules.hpp  game_types.hpp  main.cpp
tests/: test_game_logic.cpp
